check_output_5.txt
cargo : warning: unused import: 
`Win32::Graphics::Gdi::*`
At line:1 char:1
+ cargo check --release 2>&1 | Out-File 
-FilePath check_output_5.txt -E ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: 
(war    ning: unused...aphics::Gdi::*`:String) 
[], R    emoteException
    + FullyQualifiedErrorId : 
NativeCommandError
 
 --> 
src\infrastructure\windows\native_menu.rs:8:40
  |
8 |     Win32::UI::WindowsAndMessaging::*, 
Win32::Graphics::Gdi::*,
  |                                        
^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: constant `DROPEFFECT_NONE` is never 
used
  --> 
src\infrastructure\windows_clipboard.rs:11:7
   |
11 | const DROPEFFECT_NONE: u32 = 0;
   |       ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` (part of 
`#[warn(unused)]`) on by default

warning: constant `CF_PREFERREDDROPEFFECT` is 
never used
  --> 
src\infrastructure\windows_clipboard.rs:16:7
   |
16 | const CF_PREFERREDDROPEFFECT: u32 = 0; // 
Will be registered dynamically
   |       ^^^^^^^^^^^^^^^^^^^^^^

warning: field `icon_config` is never read
  --> src\ui\cache.rs:51:5
   |
38 | pub struct CacheManager {
   |            ------------ field in this 
struct
...
51 |     icon_config: IconCacheConfig,
   |     ^^^^^^^^^^^

warning: `mtt-file-manager` (lib) generated 4 
warnings (run `cargo fix --lib -p 
mtt-file-manager` to apply 1 suggestion)
    Checking mtt-file-manager v0.1.0 (C:\MTT 
File Manager)
warning: unused import: `mtt_file_manager::ui::
context_menu::render_context_menu`
  --> src\main.rs:40:5
   |
40 | use mtt_file_manager::ui::context_menu::re
nder_context_menu;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

error[E0609]: no field `pending_native_menu` 
on type `ContextMenuState`
    --> src\main.rs:1512:31
     |
1512 |             
self.context_menu.pending_native_menu =
     |                               
^^^^^^^^^^^^^^^^^^^ unknown field
     |
     = note: available fields are: `is_open`, 
`position`, `item_index`, `target_path`, 
`is_empty_area` ... and 3 others

error[E0277]: `NonNull<c_void>` cannot be 
shared between threads safely
    --> src\main.rs:2564:57
     |
2564 |                 
self.context_menu.native_context = 
Some(std::sync::Arc::new(shell_ctx));
     |                                         
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
`NonNull<c_void>` cannot be shared between 
threads safely
     |
     = help: within `ShellMenuContext`, the 
trait `Sync` is not implemented for 
`NonNull<c_void>`
note: required because it appears within the 
type `IUnknown`
    --> C:\Users\mtamu\.cargo\registry\src\inde
x.crates.io-1949cf8c6b5b557f\windows-core-0.58.
0\src\unknown.rs:10:12
     |
  10 | pub struct IUnknown(NonNull<c_void>);
     |            ^^^^^^^^
note: required because it appears within the 
type `IContextMenu`
    --> C:\Users\mtamu\.cargo\registry\src\inde
x.crates.io-1949cf8c6b5b557f\windows-0.58.0\src
\Windows\Win32\UI\Shell\mod.rs:8549:38
     |
8549 | windows_core::imp::define_interface!(ICo
ntextMenu, IContextMenu_Vtbl, 
0x000214e4_0000_0000_c000_000000000046);
     |                                      
^^^^^^^^^^^^
note: required because it appears within the 
type `ShellMenuContext`
    --> C:\MTT File Manager\src\infrastructure\
windows\native_menu.rs:23:12
     |
  23 | pub struct ShellMenuContext {
     |            ^^^^^^^^^^^^^^^^
     = note: required for the cast from 
`Arc<ShellMenuContext>` to `Arc<dyn 
std::any::Any + Send + Sync>`

error[E0277]: `NonNull<c_void>` cannot be sent 
between threads safely
    --> src\main.rs:2564:57
     |
2564 |                 
self.context_menu.native_context = 
Some(std::sync::Arc::new(shell_ctx));
     |                                         
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
`NonNull<c_void>` cannot be sent between 
threads safely
     |
     = help: within `ShellMenuContext`, the 
trait `Send` is not implemented for 
`NonNull<c_void>`
note: required because it appears within the 
type `IUnknown`
    --> C:\Users\mtamu\.cargo\registry\src\inde
x.crates.io-1949cf8c6b5b557f\windows-core-0.58.
0\src\unknown.rs:10:12
     |
  10 | pub struct IUnknown(NonNull<c_void>);
     |            ^^^^^^^^
note: required because it appears within the 
type `IContextMenu`
    --> C:\Users\mtamu\.cargo\registry\src\inde
x.crates.io-1949cf8c6b5b557f\windows-0.58.0\src
\Windows\Win32\UI\Shell\mod.rs:8549:38
     |
8549 | windows_core::imp::define_interface!(ICo
ntextMenu, IContextMenu_Vtbl, 
0x000214e4_0000_0000_c000_000000000046);
     |                                      
^^^^^^^^^^^^
note: required because it appears within the 
type `ShellMenuContext`
    --> C:\MTT File Manager\src\infrastructure\
windows\native_menu.rs:23:12
     |
  23 | pub struct ShellMenuContext {
     |            ^^^^^^^^^^^^^^^^
     = note: required for the cast from 
`Arc<ShellMenuContext>` to `Arc<dyn 
std::any::Any + Send + Sync>`

warning: use of deprecated method 
`eframe::egui::ScrollArea::id_source`: Renamed 
id_salt
    --> src\main.rs:3181:26
     |
3181 |                         
.id_source("preview_scroll")
     |                          ^^^^^^^^^
     |
     = note: `#[warn(deprecated)]` on by 
default

error[E0609]: no field `pending_native_menu` 
on type `ContextMenuState`
    --> src\main.rs:3635:38
     |
3635 |                 && 
self.context_menu.pending_native_menu.is_none()
     |                                      
^^^^^^^^^^^^^^^^^^^ unknown field
     |
     = note: available fields are: `is_open`, 
`position`, `item_index`, `target_path`, 
`is_empty_area` ... and 3 others

warning: unused import: `mtt_file_manager::ui::
context_menu::ContextMenuOperations`
    --> src\main.rs:3717:21
     |
3717 |                 use mtt_file_manager::ui
::context_menu::ContextMenuOperations;
     |                     ^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unnecessary `unsafe` block
    --> src\main.rs:1010:39
     |
 974 |             unsafe {
     |             ------ because it's nested 
under this `unsafe` block
...
1010 |                                 match 
unsafe {
     |                                       
^^^^^^ unnecessary `unsafe` block
     |
     = note: `#[warn(unused_unsafe)]` (part of 
`#[warn(unused)]`) on by default

Some errors have detailed explanations: E0277, 
E0609.
For more information about an error, try 
`rustc --explain E0277`.
warning: `mtt-file-manager` (bin 
"mtt-file-manager") generated 4 warnings
error: could not compile `mtt-file-manager` 
(bin "mtt-file-manager") due to 4 previous 
errors; 4 warnings emitted
